# fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn.conf.py  main.py  nginx.conf  pyproject.toml  renovate.json  ruff.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
docs/: api-documentation.py  redoc.py
migrations/: env.py
migrations/versions/: 2024_12_01_1348-2a1ac099bed4_add_users_table.py
scripts/: entrypoint.sh
src/app/: main.py  version.py
src/app/api/: api.py
src/app/api/health/: router.py  schemas.py
src/app/api/users/: deps.py  models.py  repositories.py  router.py  schemas.py  services.py
src/app/config/: __init__.py  application.py  database.py  middlewares.py  settings.py
src/app/helpers/: base.py  dependencies.py  exceptions.py  schemas.py
src/app/utils/: __init__.py  enums.py  logger.py  opentelemetry.py
tests/: conftest.py  db_session.py  fixtures.py
tests/integration/: test_app.py  test_users.py
tests/unit/: test_user_repository.py  test_user_service.py
